--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 		</pluginRepository>
 	</pluginRepositories>
 	
+<profiles>	
 <profile>
   <id>coverage</id>
   <build>
@@ -119,5 +120,6 @@
    </plugins>
   </build>
 </profile>
+</profiles>
 
 </project>
